third_party/move/move-compiler/tests/move_check/parser/spec_parsing_index_fail.exp
error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/spec_parsing_index_fail.move:3:15
  │
3 │       let _ = x[1];
  │               ^^^^ `_[_]` index operator in non-specification code only allowed in Move 2 and beyond

